...
  "areYouSureYouWantToDeleteYourAccount": "Are you sure you want to delete your account?",
  "ifYouChangeYourMindYouWillNotBeAbleToUndoThis": "If you change your mind, you will not be able to undo this",
  "yesDeleteMyAccount": "YES, Delete my account",
  "taskComplete": "Task Complete",
  "taskHasBeenSetToComplete": "Task has been set to Complete",
  "writeProjectName": "Write Project Name...",
  "next": "Next",
  "saving": "Saving...",
  "addTitle": "Add title",
  "addDescription": "Add description",
  "downloading": "Downloading...",
  "failed": "Failed",
  "shareTheAppWithYourFriends": "Share the app with your friends",
...
  "signInIncorrectPassword": "Incorrect password.",
  "signIn": "Sign In",
  "signInForgotPassword": "Forgot password?",
  "signInCreateANewAccount": "Create a new account",
  "signInReset": "Send Reset Link",
  "slogan": "Project Management for Builders",
  "email": "Email",
  "password": "Password",
  "signInCreateAccount": "Create Account",
  "cameraNeedPermission": "We need your permission to show the camera so you can take photos.",
  "cameraPermissionOpenSettings": "Open settings to enable camera permissions.",
  "copy": "Copy",
  "shareDescription": "Let anybody with the link see this project",
...
